--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 header {
   height: 100vh;
-  background: linear-gradient(120deg, #3b82f6, #06b6d4);
+  background: linear-gradient(120deg, #2a374d, #546e80);
   display: flex;
   flex-direction: column;
   justify-content: center;
